--- a/.github/workflows/CI-unittests.yml
+++ b/.github/workflows/CI-unittests.yml
@@ -112,7 +112,7 @@ jobs:
         env:
           SIMTOOLS_DB_SIMULATION_MODEL: ${{ env.SIMTOOLS_DB_SIMULATION_MODEL }}
         run: |
-          pytest --durations=10 --color=yes -n auto --dist loadscope \
+          pytest --durations=10 --color=yes -n 4 --dist loadscope \
             --cov=simtools --cov-report=xml
 
       # CTAO-DPPS-SonarQube
@@ -127,7 +127,7 @@ jobs:
         env:
           SIMTOOLS_DB_SIMULATION_MODEL: ${{ env.SIMTOOLS_DB_SIMULATION_MODEL }}
         run: |
-          pytest --color=yes -n auto --dist loadscope --count 5 --random-order
+          pytest --color=yes -n 4 --dist loadscope --count 5 --random-order
 
       - name: Upload coverage report to codecov
         uses: codecov/codecov-action@v5
