Add SimPipe usecases to integration tests config for DPPS 0.1

--- a/tests/integration_tests/config/derive_photon_electron_spectrum_lst_ecsv.yml
+++ b/tests/integration_tests/config/derive_photon_electron_spectrum_lst_ecsv.yml
@@ -3,6 +3,7 @@ CTA_SIMPIPE:
   APPLICATIONS:
   - APPLICATION: simtools-derive-photon-electron-spectrum
     TEST_NAME: LST_ecsv
+    TEST_USE_CASE: UC-150-2.1.2
     CONFIGURATION:
       INPUT_SPECTRUM: ./tests/resources/SinglePhe_spectrum_totalfit_19pixel-average_20200601.ecsv
       AFTERPULSE_SPECTRUM: ./tests/resources/LST_afterpulses.ecsv
