Exclude tests (and test files) from pypi package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,7 +113,11 @@ package-dir = { "" = "src" }
 
 [tool.setuptools.packages.find]
 where = [ "src" ]
-exclude = [ "simtools._dev_version.*" ]
+exclude = [
+  "simtools._dev_version.*",
+  "./tests",
+  "./tests/*",
+]
 
 [tool.setuptools_scm]
 write_to = "src/simtools/_version.py"
