--- a/docker/Dockerfile-prod-opt
+++ b/docker/Dockerfile-prod-opt
@@ -8,6 +8,7 @@ ARG AVX_FLAG="avx2"
 ARG CORSIKA_VERSION="77550"
 ARG BERNLOHR_VERSION="1.68"
 ARG BUILD_BRANCH=main
+ARG PYTHON_VERSION="3.13"
 
 RUN yum update -y && yum install -y \
     gcc-fortran gsl-devel libgfortran \
@@ -87,12 +88,12 @@ COPY --from=build_image /workdir/sim_telarray/ /workdir/sim_telarray/
 
 RUN microdnf update -y && microdnf install -y \
     bc findutils gcc-c++ git gsl-devel gcc-fortran libgfortran \
-    procps python3.11-pip zstd && \
+    procps python${PYTHON_VERSION}-pip zstd && \
     microdnf clean all
 
 RUN BUILD_BRANCH=$(echo $BUILD_BRANCH | sed 's#refs/tags/##') && \
     git clone -b $BUILD_BRANCH https://github.com/gammasim/simtools.git --depth 1 && \
-    python3.11 -m venv env && \
+    python${PYTHON_VERSION} -m venv env && \
     source env/bin/activate && \
     pip install -U pip && \
     pip install --no-cache-dir ./simtools && \
