authentication DB env variable

--- a/.github/workflows/CI-unittests.yml
+++ b/.github/workflows/CI-unittests.yml
@@ -7,6 +7,7 @@ env:
   SIMTOOLS_DB_API_USER: api
   SIMTOOLS_DB_API_PW: password
   SIMTOOLS_DB_API_PORT: 27017
+  SIMTOOLS_DB_AUTHENTICATION_DB: admin
   SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
 on:
