--- a/.github/workflows/CI-unittests.yml
+++ b/.github/workflows/CI-unittests.yml
@@ -15,6 +15,8 @@ on:
     types: [opened, synchronize]
   schedule:
     - cron: "0 0 * * *"
+  release:
+    types: [published]
 
 jobs:
   unittests:
