--- a/tests/integration_tests/config/production_scale_events.yml
+++ b/tests/integration_tests/config/production_scale_events.yml
@@ -10,7 +10,8 @@ CTA_SIMPIPE:
       - 40
       - 52
       - 60
-      OFFSETS: 0
+      OFFSETS:
+      - 0
       QUERY_POINT:
       - 1
       - 180
@@ -20,7 +21,8 @@ CTA_SIMPIPE:
       INTERPOLATE: true
       OUTPUT_PATH: simtools-output
       OUTPUT_FILE: interpolated_scaled_events.json
-      METRIC: tests/resources/production_simulation_config_metrics.yml
+      METRICS_FILE: tests/resources/production_simulation_config_metrics.yml
+      FILE_NAME_TEMPLATE: prod6_LaPalma-{zenith}deg_gamma_cone.N.Am-4LSTs09MSTs_ID0_reduced.fits
     INTEGRATION_TESTS:
     - OUTPUT_FILE: interpolated_scaled_events.json
 SCHEMA_NAME: application_workflow.metaschema
