--- a/tests/integration_tests/config/docs_produce_array_element_report_run.yml
+++ b/tests/integration_tests/config/docs_produce_array_element_report_run.yml
@@ -7,7 +7,7 @@ CTA_SIMPIPE:
       SITE: North
       TELESCOPE: LSTN-01
       MODEL_VERSION: 6.0.0
-      OUTPUT_PATH: simtools-output/reports/productions/6.0.0
+      OUTPUT_PATH: simtools-output/reports/productions/6.0.0/
       USE_PLAIN_OUTPUT_PATH: true
     INTEGRATION_TESTS:
     - OUTPUT_FILE: LSTN-01.md
