--- a/tests/integration_tests/config/docs_produce_model_parameter_reports_run.yml
+++ b/tests/integration_tests/config/docs_produce_model_parameter_reports_run.yml
@@ -6,9 +6,9 @@ CTA_SIMPIPE:
     CONFIGURATION:
       SITE: North
       TELESCOPE: LSTN-01
-      OUTPUT_PATH: simtools-output/reports/parameters/LSTN-01/
+      OUTPUT_PATH: simtools-output/reports/parameters/
       USE_PLAIN_OUTPUT_PATH: true
     INTEGRATION_TESTS:
-    - OUTPUT_FILE: quantum_efficiency.md
+    - OUTPUT_FILE: LSTN-01/quantum_efficiency.md
 SCHEMA_NAME: application_workflow.metaschema
 SCHEMA_VERSION: 0.3.0
