--- a/tests/integration_tests/config/docs_produce_array_element_report_run.yml
+++ b/tests/integration_tests/config/docs_produce_array_element_report_run.yml
@@ -7,9 +7,9 @@ CTA_SIMPIPE:
       SITE: North
       TELESCOPE: LSTN-01
       MODEL_VERSION: 6.0.0
-      OUTPUT_PATH: simtools-output/reports/productions/6.0.0/
+      OUTPUT_PATH: simtools-output/reports/productions/
       USE_PLAIN_OUTPUT_PATH: true
     INTEGRATION_TESTS:
-    - OUTPUT_FILE: LSTN-01.md
+    - OUTPUT_FILE: 6.0.0/LSTN-01.md
 SCHEMA_NAME: application_workflow.metaschema
 SCHEMA_VERSION: 0.3.0
