--- a/tests/integration_tests/config/db_add_value_from_json_to_db_run.yml
+++ b/tests/integration_tests/config/db_add_value_from_json_to_db_run.yml
@@ -6,6 +6,7 @@ CTA_SIMPIPE:
     CONFIGURATION:
       FILE_NAME: ./tests/resources/model_parameters/num_gains-0.0.0.json
       DB_COLLECTION: telescopes
-      DB: sandbox
+      DB_SIMULATION_MODEL: sandbox
+      TEST_DB: true
 SCHEMA_NAME: application_workflow.metaschema
 SCHEMA_VERSION: 0.3.0
