Allow to skip integration tests for production DB.

--- a/tests/integration_tests/config/db_add_file_to_db_run.yml
+++ b/tests/integration_tests/config/db_add_file_to_db_run.yml
@@ -3,6 +3,7 @@ CTA_SIMPIPE:
   APPLICATIONS:
   - APPLICATION: simtools-db-add-file-to-db
     TEST_NAME: run
+    SKIP_FOR_PRODUCTION_DB: true
     CONFIGURATION:
       FILE_NAME:
       - ./tests/resources/MLTdata-preproduction.meta.yml
