--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,7 @@ scripts.simtools-generate-regular-arrays = "simtools.applications.generate_regul
 scripts.simtools-generate-simtel-array-histograms = "simtools.applications.generate_simtel_array_histograms:main"
 scripts.simtools-plot-array-layout = "simtools.applications.plot_array_layout:main"
 scripts.simtools-plot-tabular-data = "simtools.applications.plot_tabular_data:main"
+scripts.simtools-print-version = "simtools.applications.print_version:main"
 scripts.simtools-production-derive-corsika-limits = "simtools.applications.production_derive_corsika_limits:main"
 scripts.simtools-production-extract-mc-event-data = "simtools.applications.production_extract_mc_event_data:main"
 scripts.simtools-production-generate-simulation-config = "simtools.applications.production_generate_simulation_config:main"
