--- a/tests/integration_tests/config/production_derive_corsika_limits_run.yml
+++ b/tests/integration_tests/config/production_derive_corsika_limits_run.yml
@@ -4,7 +4,8 @@ CTA_SIMPIPE:
   - APPLICATION: simtools-production-derive-corsika-limits
     TEST_NAME: simtools-production-derive-corsika-limits
     CONFIGURATION:
-      EVENT_DATA_FILE: tests/resources/run202_202_proton_za20deg_azm0deg_North_test_layout_test-prod.simtel.hdf5
+      EVENT_DATA_FILES: tests/resources/production_event_data_files.yml
       LOSS_FRACTION: 1.e-3
+      TELESCOPE_IDS: tests/resources/production_layouts_telescope_ids.yml
 SCHEMA_NAME: application_workflow.metaschema
 SCHEMA_VERSION: 0.3.0
