--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,6 +94,7 @@ scripts.simtools-generate-simtel-event-data = "simtools.applications.generate_si
 scripts.simtools-plot-array-layout = "simtools.applications.plot_array_layout:main"
 scripts.simtools-plot-tabular-data = "simtools.applications.plot_tabular_data:main"
 scripts.simtools-production-derive-corsika-limits = "simtools.applications.production_derive_corsika_limits:main"
+scripts.simtools-production-generate-grid = "simtools.applications.production_generate_grid:main"
 scripts.simtools-production-generate-simulation-config = "simtools.applications.production_generate_simulation_config:main"
 scripts.simtools-production-scale-events = "simtools.applications.production_scale_events:main"
 scripts.simtools-run-application = "simtools.applications.run_application:main"
