--- a/tests/resources/production_grid_generation_axes_definition.yml
+++ b/tests/resources/production_grid_generation_axes_definition.yml
@@ -10,8 +10,8 @@ axes:
     binning: 2
     scaling: linear
     units: deg
-  night_sky_background:
-    range: [5, 6]
+  nsb:
+    range: [4, 5]
     binning: 2
     scaling: linear
     units: MHz
