--- a/tests/integration_tests/config/production_generate_grid.yml
+++ b/tests/integration_tests/config/production_generate_grid.yml
@@ -5,9 +5,11 @@ CTA_SIMPIPE:
   CONFIGURATION:
     SITE: "North"
     MODEL_VERSION: "6.0.0"
-    AXES: tests/resources/production_grid_generation_axes_definition.yaml
-    COORDINATE_SYSTEM: "ra_dec"
+    AXES: tests/resources/production_grid_generation_axes_definition.yml
+    COORDINATE_SYSTEM: "zenith_azimuth"
     OBSERVING_TIME: "2017-09-16 00:00:00"
+    LOOKUP_TABLE: tests/resources/corsika_simulation_limits_lookup.ecsv
+    TELESCOPE_IDS: []
     OUTPUT_PATH: simtools-output
     OUTPUT_FILE: grid_output.json
   INTEGRATION_TESTS:
