--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,14 @@ requires = [
 name = "gammasimtools"
 description = "Tools for the Simulation System of the CTA Observatory"
 readme = "README.md"
-license = { file = "LICENSE" }
+license = "BSD-3-Clause"
+license-files = [ "LICENSE" ]
 authors = [
   { name = "simtools developers", email = "simtools-developer@desy.de" },
 ]
 requires-python = ">=3.11"
 classifiers = [
   "Intended Audience :: Science/Research",
-  "License :: OSI Approved :: BSD License",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3 :: Only",
   "Programming Language :: Python :: 3.11",
