--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_for_trigger_rates.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_for_trigger_rates.yml
@@ -24,13 +24,13 @@ CTA_SIMPIPE:
       SAVE_FILE_LISTS: true
       LOG_LEVEL: DEBUG
     INTEGRATION_TESTS:
-    - OUTPUT_FILE: 'simtel/data/run000001/run000001_proton_za20deg_azm000deg_South_4mst_test-production-South-for-trigger-rates.zst
+    - OUTPUT_FILE: 'simtel/data/run000001/run000001_proton_za20deg_azm000deg_South_4mst_6.0.0_test-production-South-for-trigger-rates.zst
 
         '
-    - OUTPUT_FILE: 'simtel/logs/run000001_proton_za20deg_azm000deg_South_4mst_test-production-South-for-trigger-rates.log.gz
+    - OUTPUT_FILE: 'simtel/logs/run000001_proton_za20deg_azm000deg_South_4mst_6.0.0_test-production-South-for-trigger-rates.log.gz
 
         '
-    - OUTPUT_FILE: 'simtel/logs/run000001_proton_za20deg_azm000deg_South_4mst_test-production-South-for-trigger-rates.hdata.zst
+    - OUTPUT_FILE: 'simtel/logs/run000001_proton_za20deg_azm000deg_South_4mst_6.0.0_test-production-South-for-trigger-rates.hdata.zst
 
         '
     - OUTPUT_FILE: log_files.txt
