--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_az0deg_South_check_output.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_az0deg_South_check_output.yml
@@ -26,7 +26,7 @@ CTA_SIMPIPE:
     INTEGRATION_TESTS:
     - TEST_OUTPUT_FILES:
       - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
-        FILE: run000001_gamma_za20deg_azm000deg_South_alpha_check_output.zst
+        FILE: run000001_gamma_za20deg_azm000deg_South_alpha_6.0.0_check_output.zst
         EXPECTED_OUTPUT:
           trigger_time:
           - 0
@@ -38,6 +38,6 @@ CTA_SIMPIPE:
           - 90
           - 1000
       - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
-        FILE: run000001_gamma_za20deg_azm000deg_South_alpha_check_output.log_hist.tar.gz
+        FILE: run000001_gamma_za20deg_azm000deg_South_alpha_6.0.0_check_output.log_hist.tar.gz
 SCHEMA_NAME: application_workflow.metaschema
 SCHEMA_VERSION: 0.3.0
