--- a/tests/integration_tests/config/docs_produce_simulation_configuration_report_run.yml
+++ b/tests/integration_tests/config/docs_produce_simulation_configuration_report_run.yml
@@ -11,6 +11,6 @@ CTA_SIMPIPE:
       OUTPUT_PATH: simtools-output/reports/productions/
       USE_PLAIN_OUTPUT_PATH: true
     INTEGRATION_TESTS:
-    - OUTPUT_FILE: 6.0.0/configuration_corsika.md
+    - OUTPUT_FILE: 6.0.0/LSTN-01_configuration_corsika.md
 SCHEMA_NAME: application_workflow.metaschema
 SCHEMA_VERSION: 0.3.0
