Add random seeds from file for instrument configuration.

--- a/tests/integration_tests/config/simulate_prod_gamma_diffuse_20_deg_South_check_output.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_diffuse_20_deg_South_check_output.yml
@@ -20,7 +20,7 @@ CTA_SIMPIPE:
       CORE_SCATTER: 20 700 m
       DATA_DIRECTORY: simtools-data
       OUTPUT_PATH: simtools-output
-      SIM_TELARRAY_SEEDS: 1745,290
+      SIM_TELARRAY_INSTRUMENT_SEEDS: 1745,290
       CORSIKA_TEST_SEEDS: true
       PACK_FOR_GRID_REGISTER: simtools-grid-output
       LOG_LEVEL: DEBUG
