--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_North.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_North.yml
@@ -21,6 +21,7 @@ CTA_SIMPIPE:
       CORE_SCATTER: 10 500 m
       DATA_DIRECTORY: simtools-data
       OUTPUT_PATH: simtools-output
+      SIM_TELARRAY_RANDOM_INSTRUMENT_INSTANCES: 100
       PACK_FOR_GRID_REGISTER: simtools-grid-output
       LOG_LEVEL: DEBUG
       SUBMIT_ENGINE: local
