--- a/.github/workflows/CI-integrationtests.yml
+++ b/.github/workflows/CI-integrationtests.yml
@@ -54,7 +54,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        type: ['6.0.0', '5.0.0']
+        type: ['6.0.0', '5.0.0', '6.0.0,5.0.0']
 
     defaults:
       run:
