--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ optional-dependencies."tests" = [
   "pytest-random-order",
   "pytest-repeat",
   "pytest-requirements",
+  "pytest-retry",
   "pytest-xdist",
 ]
 urls."bug tracker" = "https://github.com/gammasim/simtools/issues"
