--- a/.github/workflows/CI-integrationtests.yml
+++ b/.github/workflows/CI-integrationtests.yml
@@ -115,4 +115,5 @@ jobs:
         run: |
           source /workdir/env/bin/activate
           pip install --no-cache-dir -e '.[tests,dev,doc]'
-          pytest --model_version=${{ matrix.model_version }} --color=yes --durations=20 -n 4 --dist loadscope --no-cov tests/integration_tests/
+          pytest --model_version=${{ matrix.model_version }} --color=yes --durations=20 \
+           -n 4 --dist loadscope --retries 2 --retry-delay 5 --no-cov tests/integration_tests/
