--- a/environment.yml
+++ b/environment.yml
@@ -26,6 +26,7 @@ dependencies:
   - pytest-mock
   - pytest-profiling
   - pytest-repeat
+  - pytest-retry
   - pytest-xdist
   - python-dotenv
   - pyyaml
