--- a/tests/integration_tests/config/docs_produce_model_parameter_reports_run.yml
+++ b/tests/integration_tests/config/docs_produce_model_parameter_reports_run.yml
@@ -3,6 +3,7 @@ CTA_SIMPIPE:
   APPLICATIONS:
   - APPLICATION: simtools-docs-produce-model-parameter-reports
     TEST_NAME: run
+    TEST_USE_CASE: UC-150-2.3
     CONFIGURATION:
       SITE: North
       TELESCOPE: LSTN-01
